--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <title>Portfolio Kiliann Gloaguen</title>
   </head>
   <body>
+    <div class="loader">
+      <div class="animation-loader"></div>
+    </div>
     <div class="wrapper">
       <div class="background-light"></div>
       <header>
