Finalisation du projet

--- a/index.html
+++ b/index.html
@@ -13,28 +13,16 @@
     />
     <title>Portfolio Kiliann Gloaguen</title>
   </head>
-  <body>
-    <div class="loader">
-      <div class="animation-loader"></div>
-    </div>
+  <body style="overflow: none">
     <div class="wrapper">
       <div class="background-light"></div>
       <header>
         <nav>
-          <span class="mobile-navbar-background">
-            <span class="close-modal"></span>
-          </span>
           <div class="logo">/gloaguen/kiliann</div>
           <ul>
-            <a href="#about-me">
-              <li>About me</li>
-            </a>
-            <a href="#skills">
-              <li>Skills</li>
-            </a>
-            <a href="#works">
-              <li>Works</li>
-            </a>
+            <li><a href="#about-me">About me</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#works">Works</a></li>
             <a href="#contact">
               <button>
                 Let's Talk
@@ -48,7 +36,6 @@
         </nav>
       </header>
       <section class="header-menu">
-        <div class="open-modal"></div>
         <div class="name">
           <h1>
             kiliann
