--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <nav>
           <div class="logo">/gloaguen/kiliann</div>
           <ul>
-            <li><a href="#about-me">About me</a></li>
+            <li><a href="#about-me">À propos</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#works">Works</a></li>
+            <li><a href="#works">Projets</a></li>
             <a href="#contact">
               <button>
-                Let's Talk
+                Contact
                 <img
                   src="./assets/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg"
-                  alt="arrow"
+                  alt="flèche"
                 />
               </button>
             </a>
@@ -44,16 +44,17 @@
           <div class="name-span">g oaguen</div>
         </div>
         <h2>
-          French
+          Développeur Web
           <span class="bold"
-            >Web Developper
+            >Français
             <div class="brush" id="anim-1"></div>
           </span>
-          and Amazon
+          et
           <span class="bold2"
-            >Influencer
+            >Influenceur
             <div class="brush" id="anim-2"></div>
           </span>
+          Amazon
         </h2>
         <div class="icons">
           <div class="icon" id="icon-terminal"></div>
@@ -78,62 +79,141 @@
       </section>
       <section class="main-menu">
         <h3 id="about-me">
-          About
+          À propos
           <div class="brush" id="anim-3"></div>
         </h3>
         <div class="about-text">
           <p>
-            My name is <span class="bold">Kiliann</span>, I am 22 years old and
-            I am a <span class="bold">web developer</span> and Amazon
-            <span class="bold">influencer</span>.
+            Je m'appelle <span class="bold">Kiliann</span>, j'ai 22 ans et je
+            suis un <span class="bold">développeur web</span> et
+            <span class="bold">influenceur</span> Amazon.
           </p>
           <p>
-            <span class="bold">Passionate about tech</span> since I was 10 years
-            old, I like to develop new skills in order to imagine and design my
-            <span class="bold">ideas</span> the way I want in order to
-            <span class="bold">achieve my goals</span>.
+            Passionné par la technologie depuis l'âge de 10 ans, j'aime
+            développer de nouvelles compétences pour imaginer et concevoir mes
+            <span class="bold">idées</span> comme je le souhaite afin
+            d'atteindre mes objectifs.
           </p>
           <p>
-            I started coding as a <span class="bold">self-taught</span> person
-            out of curiosity, then I ended up taking an
-            <span class="bold">online training</span> to improve my coding
-            skills.
+            J'ai commencé à coder en autodidacte par curiosité, puis j'ai suivi
+            une <span class="bold">formation en ligne</span> pour améliorer mes
+            compétences en programmation.
           </p>
           <p>
-            Today, I build <span class="bold">websites</span> and
-            <span class="bold">SaaS</span> for my online business and am
-            constantly looking to <span class="bold">improve my coding</span>.
+            Aujourd'hui, je crée des <span class="bold">sites web</span> et des
+            <span class="bold">SaaS</span> pour mon entreprise et je cherche
+            constamment à <span class="bold">améliorer mon code.</span>.
           </p>
           <p>
-            As for my social media, I started in September 2022 by presenting
-            vidéos of everyday products to help
-            <span class="bold">my community</span>! Today, I have
-            <span class="bold">generated</span> more than
-            <span class="bold">70 000 €</span> for my collaborators and I have
-            accumulated more than <span class="bold">10 million views</span> on
-            my social networks.
+            En ce qui concerne mes réseaux sociaux, j'ai commencé en septembre
+            2022 en présentant des vidéos de produits quotidiens pour aider
+            <span class="bold">ma communauté</span> ! Aujourd'hui, j'ai
+            <span class="bold">généré</span> plus de
+            <span class="bold">90 000 €</span> pour mes collaborateurs et j'ai
+            accumulé plus de <span class="bold">13 millions de vues</span> sur
+            mes réseaux sociaux.
           </p>
         </div>
-        <div class="routes"></div>
+        <div class="social-cards">
+          <div class="social-card">
+            <img
+              src="/assets/tiktok_logo.png"
+              class="logo-social"
+              alt="Logo de Tiktok"
+            />
+            <div class="social-name">@charlesgln</div>
+            <div class="followers">198k followers</div>
+            <a
+              href="https://www.tiktok.com/@charlesgln"
+              target="_blank"
+              class="social-link"
+            ></a>
+          </div>
+          <div class="social-card">
+            <img
+              src="/assets/facebook_logo.png"
+              class="logo-social"
+              alt="Logo de facebook"
+            />
+            <div class="social-name">@LesPépites</div>
+            <div class="followers">110k followers</div>
+            <a
+              href="https://www.facebook.com/profile.php?id=100087399402749"
+              target="_blank"
+              class="social-link"
+            ></a>
+          </div>
+          <div class="social-card">
+            <img
+              src="/assets/instagram_logo.png"
+              class="logo-social"
+              alt="Logo de instagram"
+            />
+            <div class="social-name">@charlesgln__</div>
+            <div class="followers">1130 followers</div>
+            <a
+              href="https://www.instagram.com/charlesgln__/"
+              target="_blank"
+              class="social-link"
+            ></a>
+          </div>
+          <div class="social-card">
+            <img
+              src="/assets/youtube_logo.png"
+              class="logo-social"
+              alt="Logo de youtube"
+            />
+            <div class="social-name">@lespepites461</div>
+            <div class="followers">582 followers</div>
+            <a
+              href="https://youtube.com/@lespepites461"
+              target="_blank"
+              class="social-link"
+            ></a>
+          </div>
+        </div>
         <h3 id="skills">
           Skills
           <div class="brush" id="anim-4"></div>
         </h3>
-        <h4>Web Développement</h4>
+        <h4>Développement Web</h4>
         <div class="skills-web-dev"></div>
-        <h4>Growth Marketing</h4>
+        <h4>Marketing Digital</h4>
         <div class="skills-growth"></div>
-        <h4>UI / UX / Editing</h4>
+        <h4>UI / UX / Montage</h4>
         <div class="skills-editing"></div>
         <h3 id="works">
-          Works
+          Projets
           <div class="brush" id="anim-5"></div>
         </h3>
         <div class="cards">
-          <div class="card project-4">
-            <div class="argentbank-card">
-              <span class="card-blur"></span>
+          <div class="card project-5" id="column-reverse-mobile">
+            <div class="information-card">
+              <div class="redirect-button">
+                <a href="https://charlizeapp.com" target="_blank">
+                  <img
+                    src="./assets/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg"
+                    alt="bouton de redirection"
+                  />
+                </a>
+              </div>
+              <div class="context-card">
+                <h6>Charlize</h6>
+                <p>
+                  Charlize est une application web qui compare les produits dans
+                  tous les magasins Amazon en Europe, c'est un bon moyen
+                  d'économiser de l'argent lors de vos achats.
+                </p>
+              </div>
+              <div class="stack-card">
+                <h6>Technologies utilisées</h6>
+                <div class="logos3"></div>
+              </div>
             </div>
+            <div class="charlize-card"></div>
+          </div>
+          <div class="card project-4">
+            <div class="argentbank-card"></div>
             <div class="information-card">
               <div class="redirect-button">
                 <a
@@ -142,20 +222,21 @@
                 >
                   <img
                     src="./assets/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg"
-                    alt="redirect-button"
+                    alt="bouton de redirection"
                   />
                 </a>
               </div>
               <div class="context-card">
                 <h6>ArgentBank</h6>
                 <p>
-                  ArgentBank is a web application that is destined to be used by
-                  hundreds of thousands of users and allows the user to interact
-                  instantly with their profile through state management.
+                  ArgentBank est une application web destinée à être utilisée
+                  par des centaines de milliers d'utilisateurs et permet à
+                  l'utilisateur d'interagir instantanément avec son profil grâce
+                  à la gestion de l'état de l'application.
                 </p>
               </div>
               <div class="stack-card">
-                <h6>Tech stack</h6>
+                <h6>Technologies utilisées</h6>
                 <div class="logos2"></div>
               </div>
             </div>
@@ -169,31 +250,27 @@
                 >
                   <img
                     src="./assets/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg"
-                    alt="redirect-button"
+                    alt="bouton de redirection"
                   />
                 </a>
               </div>
               <div class="context-card">
                 <h6>Kaza</h6>
                 <p>
-                  Kaza is a web application for renting flats between
-                  individuals, offering accommodation everywhere in France with
-                  detailed information.
+                  Kaza est une application web de location de logements entre
+                  particuliers, offrant des hébergements partout en France avec
+                  des informations détaillées.
                 </p>
               </div>
               <div class="stack-card">
-                <h6>Tech stack</h6>
+                <h6>Technologies utilisées</h6>
                 <div class="logos3"></div>
               </div>
             </div>
-            <div class="kaza-card">
-              <span class="card-blur"></span>
-            </div>
+            <div class="kaza-card"></div>
           </div>
           <div class="card project-2">
-            <div class="sophie-card">
-              <span class="card-blur"></span>
-            </div>
+            <div class="sophie-card"></div>
             <div class="information-card">
               <div class="redirect-button">
                 <a
@@ -202,20 +279,21 @@
                 >
                   <img
                     src="./assets/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg"
-                    alt="redirect-button"
+                    alt="bouton de redirection"
                   />
                 </a>
               </div>
               <div class="context-card">
                 <h6>Sophie Bluel</h6>
                 <p>
-                  Sophie Bluel's website is a portfolio of a space designer.
-                  Sophie has the possibility to log in as an admin and modify
-                  her projects directly from the site.
+                  Le site web de Sophie Bluel est un portfolio d'une designer
+                  d'espace. Sophie a la possibilité de se connecter en tant
+                  qu'administratrice et de modifier ses projets directement
+                  depuis le site.
                 </p>
               </div>
               <div class="stack-card">
-                <h6>Tech stack</h6>
+                <h6>Technologies utilisées</h6>
                 <div class="logos4"></div>
               </div>
             </div>
@@ -229,69 +307,48 @@
                 >
                   <img
                     src="./assets/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg"
-                    alt="redirect-button"
+                    alt="bouton de redirection"
                   />
                 </a>
               </div>
               <div class="context-card">
                 <h6>OhMyFood</h6>
                 <p>
-                  OhMyFood is an online booking website for gourmet restaurants.
-                  It has some nice animations.
+                  OhMyFood est un site web de réservation en ligne pour des
+                  restaurants gastronomiques. Il propose des animations
+                  agréables.
                 </p>
               </div>
               <div class="stack-card">
-                <h6>Tech stack</h6>
+                <h6>Technologies utilisées</h6>
                 <div class="logos5"></div>
               </div>
             </div>
-            <div class="ohmyfood-card">
-              <span class="card-blur"></span>
-            </div>
+            <div class="ohmyfood-card"></div>
           </div>
         </div>
       </section>
       <div class="header-contact" id="contact">
         <h3 id="work-together">
-          Work together
+          Contactez-moi
           <div class="brush" id="anim-6"></div>
         </h3>
         <p id="contact-p">
-          Want to discuss your next web project?
-          <br style="margin-bottom: 20px" />I'm always happy to talk to new
-          clients. Please feel free to contact me via the form below. I will get
-          back to you as soon as possible to discuss your web development needs.
+          Vous souhaitez discuter de votre prochain projet web ?
+          <br style="margin-bottom: 20px" />Je suis toujours heureux de parler à
+          de nouveaux clients. N'hésitez pas à me contacter via le mail
+          ci-dessous. Je vous répondrai dès que possible pour discuter de vos
+          besoins en développement web.
         </p>
-        <form id="contact-form">
-          <div class="info-contact">
-            <div class="first-name-input">
-              <label for="firstName">First Name *</label>
-              <input type="text" id="firstName" required />
-            </div>
-            <div class="last-name-input">
-              <label for="lastName">Last Name *</label>
-              <input type="text" id="lastName" required />
-            </div>
-            <div class="email-input">
-              <label for="email">E-mail *</label>
-              <input type="text" id="email" required />
-            </div>
-          </div>
-          <div class="message-contact">
-            <label for="object">Object *</label>
-            <input type="text" id="object" required />
-            <label for="message">Message *</label>
-            <textarea id="message" cols="30" rows="10" required></textarea>
-          </div>
-
-          <button id="submit-button">
-            Envoyer
-            <img src="./assets/arrow-black.png" alt="Flèche Noir" />
-          </button>
-        </form>
+        <div class="email">
+          <a href="mailto:gcorpfr@gmail.com" target="_blank">
+            gcorpfr@gmail.com</a
+          >
+          <div class="click_here"></div>
+        </div>
       </div>
       <section id="footer">
-        <p>Designed & Built by K.Gloaguen</p>
+        <p>Conçu et développé par K.Gloaguen</p>
         <div class="footer-info">
           <div class="social-media">
             <a href="https://www.instagram.com/kilianngln/" target="_blank">
