--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="social-cards">
           <div class="social-card">
             <img
-              src="/assets/tiktok_logo.png"
+              src="./assets/tiktok_logo.png"
               class="logo-social"
               alt="Logo de Tiktok"
             />
@@ -131,7 +131,7 @@
           </div>
           <div class="social-card">
             <img
-              src="/assets/facebook_logo.png"
+              src="./assets/facebook_logo.png"
               class="logo-social"
               alt="Logo de facebook"
             />
@@ -145,7 +145,7 @@
           </div>
           <div class="social-card">
             <img
-              src="/assets/instagram_logo.png"
+              src="./assets/instagram_logo.png"
               class="logo-social"
               alt="Logo de instagram"
             />
@@ -159,7 +159,7 @@
           </div>
           <div class="social-card">
             <img
-              src="/assets/youtube_logo.png"
+              src="./assets/youtube_logo.png"
               class="logo-social"
               alt="Logo de youtube"
             />
