--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           <div class="name-span">g oaguen</div>
         </div>
         <h2>
-          Développeur Web
+          Développeur front-end
           <span class="bold"
-            >Français
+            >React
             <div class="brush" id="anim-1"></div>
           </span>
           et
