--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;500;700&family=Outfit:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio Kiliann Gloaguen</title>
+    <title>Kiliann Gloaguen</title>
   </head>
   <body style="overflow: none">
     <div class="wrapper">
